...
    android:rowCount="6"
    android:layout_columnWeight="4"
    android:layout_rowWeight="6"
    tools:context="com.jerome.calcul.MainActivity">

    <TextView
        android:id="@+id/text_result"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_gravity="fill_horizontal|fill_vertical"
        android:layout_rowWeight="1"
        android:layout_columnWeight="3"
        android:layout_columnSpan="3"
...
        android:padding="5sp"
        android:background="@color/primary_text"
        android:textColor="@color/icons"
        android:text="@string/calc_default_value" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_gravity="fill_horizontal|fill_vertical"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:tag="C"
...
        android:layout_columnSpan="4"
        android:layout_rowSpan="4"
        android:layout_height="0dp"
        android:layout_width="0dp" />

    <Button
        android:id="@+id/btn_equal"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal|fill_vertical"
        android:layout_rowWeight="1"
        android:layout_columnWeight="4"
...
